examples/mood/tests/fixtures/construct_struct_undefined_field.mood.expected
Error: Undefined struct field: "c".:
 --> construct_struct_undefined_field.mood:7:31

  | pub fn test(): i32 {
7 |     Foo { a: 1_i32, b: 1_i32, c: 1_i32 };
  |                               ^ "c" is not a field of "Foo".
  |     0_i32
